--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - ./routes:/var/www/routes
       - ./storage:/var/www/storage
       - ./.env:/var/www/.env
+      - ./storage/framework/sessions:/var/www/storage/framework/sessions
       - ./storage/app/public:/var/www/storage/app/public
       - ./storage/app/public/products:/var/www/storage/app/public/products
       - ./storage/app/public/avatars:/var/www/storage/app/public/avatars
