--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,59 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PIxBHc+EXEvVvYLZVIckwB5iMRpeDaHBCDMeJmsK53Q=  # sẽ generate sau
 APP_DEBUG=true
-APP_URL=http://localhost
-
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+APP_URL=http://localhost:8000
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=mysql-db        # Đảm bảo tên này trùng với tên service trong docker-compose.yml
+DB_PORT=3306            # Đây là cổng của MySQL trong container
+DB_DATABASE=fruitshop
 DB_USERNAME=root
 DB_PASSWORD=
+
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+FILESYSTEM_DISK=public
+
+REDIS_HOST=redis
+
+
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# Các cài đặt khác...
+
+# APP_NAME=Laravel
+# APP_ENV=local
+# APP_KEY=base64:Qz8yfzHAiOje/0LELUGtQNuC+u8GJIpMvL+1VzZ+b5M=
+# APP_DEBUG=true
+# APP_URL=http://127.0.0.1
+
+# LOG_CHANNEL=stack
+# LOG_DEPRECATIONS_CHANNEL=null
+# LOG_LEVEL=debug
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=fruitshop
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
+SESSION_DOMAIN=localhost
+# SESSION_DOMAIN=127.0.0.1
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=false
+SESSION_SAME_SITE=null
 
 MEMCACHED_HOST=127.0.0.1
+
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -36,6 +67,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -56,3 +88,17 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+# MOMO_REDIRECT_URL=http://127.0.0.1:8000/thank
+MOMO_REDIRECT_URL=http://localhost:8000/thank
+MOMO_IPN_URL=https://webhook.site/b3088a6a-2d17-4f8d-a383-71389a6c600b
+
+
+GOOGLE_CLIENT_ID=525872996748-olr192ck5e41hrjesd6qe9elhj8h59i3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+# GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
+
